app/scss/components/hero-section/hero-texts.scss
@use "../../util/" as *;

.hero-texts {
  &__name {
    font-size: 7rem;
    font-weight: var(--font-extra-bold);
    color: var(--font-color);
    line-height: 7rem;

    // Responsive
    @include breakpoint-down(medium) {
      text-align: center;
    }
  }

  &__description {
    font-size: 1.5rem;
    font-weight: var(--font-medium);
    color: var(--disabled-color);
    line-height: 1.5rem;

    margin: 2rem 0;

    &-bold {
      font-weight: var(--font-extra-bold);
      color: var(--primary-color);
    }

    // Responsive
    @include breakpoint-down(medium) {
      text-align: center;
      margin: 2rem 0;
    }
  }

  &__contact-btn {
    @include primaryButton;
    // Responsive
    @include breakpoint-down(medium) {
      margin: 0 auto;
    }
  }
}

